--- a/src/style.css
+++ b/src/style.css
@@ -31,8 +31,9 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 2em;
   line-height: 1.1;
+  color: #ffe5e5;
 }
 
 #app {
@@ -63,23 +64,45 @@ h1 {
   color: #888;
 }
 
+.buttonContainer {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+
 button {
-  border-radius: 8px;
+  border-radius: 50px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+  padding-bottom: 1.5em;
+  width: 3rem;
+  height: 3rem;
+  font-size: 2em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #5d56c5;
   cursor: pointer;
-  transition: border-color 0.25s;
+  transition: background-color 0.25s linear;
 }
 button:hover {
-  border-color: #646cff;
+  background-color: #1e1e25;
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+.counterContainer {
+  background-color: #373737;
+  width: 400px;
+  height: 250px;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.counterValue {
+  font-size: 2em;
 }
 
 @media (prefers-color-scheme: light) {
